# evolving_agent

./: .gitignore  RD_MultiAgent_ML_System.docx  README.md  config.yaml  experiment_context.json  nvidia_hack.docx  pyproject.toml
part1_core/: README.md  pyproject.toml
part1_core/schemas/: experiment_context.json
part1_core/scripts/: export_schema.py
part1_core/src/rdkit_core/: __init__.py  config.py
part1_core/src/rdkit_core/models/: __init__.py  context.py  spec.py
part1_core/src/rdkit_core/tools/: __init__.py  datastore.py  executor.py  llm_client.py  registry.py  tracker.py
part1_core/tests/: conftest.py  test_config.py  test_datastore.py  test_executor.py  test_models.py
part2-dataset-agent/: .env.example  IMPLEMENTATION.md  README.md  package.json
part2-dataset-agent/app/: page.tsx
part2-dataset-agent/lib/: flow.ts  nemotron.ts  types.ts
part2_data_mining/: __init__.py  __main__.py
part2_data_mining/agent/: loop.py  profiler.py  proposer.py  trainer.py
part3_research_agent/: .env.example  IMPLEMENTATION.md  README.md  main.py  requirements.txt
part3_research_agent/part3/: __init__.py  flow.py  nemotron.py  types.py
part3_research_agent/templates/: index.html
part3_research_copilot/: __init__.py  __main__.py
part3_research_copilot/agent/: codegen.py  loop.py  paper_search.py  spec_extractor.py
part4_kaggle_orchestrator/: __init__.py  __main__.py
part4_kaggle_orchestrator/kaggle_agent/: __main__.py  agent.py  ensemble.py  fe_catalog.py  sweep.py
part4_kaggle_orchestrator/orchestrator/: main.py
(+7 files in other folders)
