[project]
name = "rdkit-multiagent"
version = "0.1.0"
description = "R&D Multi-Agent ML System for tabular data"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["part1_core/tests"]
